--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-react": "^7.16.7",
     "autoprefix": "^1.0.1",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "frontmatter-markdown-loader": "^3.6.3",
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23"
