--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "node-glob": "^1.2.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -20,7 +24,6 @@
     "autoprefix": "^1.0.1",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "frontmatter-markdown-loader": "^3.6.3",
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23"
