--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0"
   },
   "devDependencies": {
